--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ background-color: white;
+ margin: auto;
+ width: 50%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ border: 1px solid #cecece;
+ box-shadow: 
+ /*The top layer shadow*/
+ 0 1px rgba(0,0,0,0.15),
+ /*  The second  layer*/
+ 0 10px 0 -5px #eee,
+ /* The third layer */
+ 0 20px 0 -10px #eee,
+ /* The third layer shadow */
+ 0 20px 1px -9px rgba(0,0,0,0.15);
+ padding: 30px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+  height: 100px;
+  text-align: center;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: whitesmoke;
+  background-color: #333333;
+  margin-bottom: 15px;
+}
+.todo-item{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px 20 0;
+  width: 70%;
+  border-bottom: 1px solid #cecece;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
+  font-size: 15px;
+  color: #333333;
+}
+input[type=checkbox] {
+  margin-right: 10px;
+  font-size: 30px;
+}
+
+input[type=checkbox]:focus{
+  outline: 0;
 }
